aks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-function
  labels:
    app: hello-function
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-function
  template:
    metadata:
      labels:
        app: hello-function
    spec:
      containers:
      - name: hello-function
        image: ducas/hello-function
        resources:
          requests:
            cpu: 100m

---

kind: Service
apiVersion: v1
metadata:
  name: hello-function
spec:
  selector:
    app: hello-function
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
    name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: ducas/webapi:1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
---

kind: Service
apiVersion: v1
metadata:
  name: webapi
spec:
  selector:
    app: webapi
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    name: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: myapp
spec:
  rules:
  - host: ducas-aks.onhoppity.com
    http:
      paths:
      - path: /fn
        backend:
          serviceName: hello-function
          servicePort: http
      - path: /wa
        backend:
          serviceName: webapi
          servicePort: http
